Fix layout issues

--- a/0x03-responsive_design/02-1-styles.css
+++ b/0x03-responsive_design/02-1-styles.css
@@ -170,8 +170,8 @@
   
   .visually-hidden:not(:focus):not(:active) {
     position: absolute !important;
-    height: 1px;
-    width: 1px;
+    height: auto;
+    width: 100%;
     overflow: hidden;
     clip: rect(1px, 1px, 1px, 1px);
     white-space: nowrap;
@@ -211,6 +211,24 @@
   
   .col-1-2 {
     width: calc((100% / 2) - 2rem);
+  }
+
+  @media only screen and (max-width: 767px) {
+	:root {
+		--section-padding: 5rem 1.5rem;
+		--section-body-padding: 2rem 0 0;
+	}
+
+	ul.row, .row {
+		flex-direction: column;
+		margin: 0;
+	}
+	[class^="col-"] {
+		margin: 0 0 3rem 0;
+	}
+	.col-1-3, .col-1-2 {
+		width: 100%;
+	}
   }
   
   /* Navbar
@@ -260,6 +278,12 @@
   .nav .nav-item:hover .nav-link::before {
     background-color: var(--color-primary);
     width: 100%;
+  }
+
+  @media only screen and (max-width: 767px) {
+	.navbar-menu {
+		display: none;
+	}
   }
   
   /* Header
@@ -857,4 +881,17 @@
     padding: 0;
     cursor: text;
     margin: 0 1rem;
+  }
+
+  @media only screen and (max-width: 992px) {
+  }
+
+  @media only screen and (max-width: 767px) {
+	.section-latest-news .row {
+		flex-direction: column;
+	  }
+  }
+
+  @media only screen and (max-width: 480px) {
+
   }
